--- a/neural_network/fluid_dynamics/body_fitted_cylinder_100Re/Velocity/LSTMEvaluationProjectParameters.json
+++ b/neural_network/fluid_dynamics/body_fitted_cylinder_100Re/Velocity/LSTMEvaluationProjectParameters.json
@@ -41,10 +41,79 @@
             "input_variable"      : "Time",
             "variables"           : ["Velocity_X", "Velocity_Y"],
             "axis"                : "plot",
+            "node_id"		   : 1000,
+            "training_timesteps"  : 450,
+            "output_name"         : "bodyfitted_cylinder_node1000",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out_raw.dat",
+            "input_variable"      : "Time",
+            "variables"           : ["Velocity_X", "Velocity_Y"],
+            "axis"                : "plot",
+            "node_id"		   : 0,
+            "training_timesteps"  : 450,
+            "output_name"         : "bodyfitted_cylinder_node0000",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out_raw.dat",
+            "input_variable"      : "Time",
+            "variables"           : ["Velocity_X", "Velocity_Y"],
+            "axis"                : "plot",
+            "node_id"		   : 3000,
+            "training_timesteps"  : 450,
+            "output_name"         : "bodyfitted_cylinder_node3000",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out_raw.dat",
+            "input_variable"      : "Time",
+            "variables"           : ["Velocity_X", "Velocity_Y"],
+            "axis"                : "plot",
+            "node_id"		   : 2000,
+            "training_timesteps"  : 450,
+            "output_name"         : "bodyfitted_cylinder_node2000",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out_raw.dat",
+            "input_variable"      : "Time",
+            "variables"           : ["Velocity_X", "Velocity_Y"],
+            "axis"                : "plot",
+            "node_id"		   : 1,
+            "training_timesteps"  : 450,
+            "output_name"         : "bodyfitted_cylinder_node0001",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out_raw.dat",
+            "input_variable"      : "Time",
+            "variables"           : ["Velocity_X", "Velocity_Y"],
+            "axis"                : "plot",
             "node_id"		   : 60,
             "training_timesteps"  : 450,
-            "output_name"         : "bodyfitted_cylinder",
+            "output_name"         : "bodyfitted_cylinder_node0060",
             "output_format"       : "png"          
-        }}
-        ]}
+        }}]}
 }
