--- a/neural_network/fluid_dynamics/body_fitted_cylinder_100Re/Pressure/LSTMProjectParameters.json
+++ b/neural_network/fluid_dynamics/body_fitted_cylinder_100Re/Pressure/LSTMProjectParameters.json
@@ -61,6 +61,7 @@
             "layer_type"          : "input_layer",
             "layer_parameters"    :{
             "layer_name"          : "input",
+            "input_to_recurrent"  : true,
                 "data_input"      : "data//training_in.npy"  
             }  
         }},   
@@ -70,18 +71,20 @@
         "parameters"    :{
             "layer_type"          : "lstm_layer",
             "layer_parameters"    :{
-            "units"         	   : 20,
-            "return_sequences"    : true
+            "units"         	   : 150,
+            "return_sequences"    : true,
+            "stateful"		   : false
         }  
-        }},   
+        }},
         {
         "python_module" : "add_layer_process",
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
             "layer_type"          : "lstm_layer",
             "layer_parameters"    :{
-            "units"         	   : 20,
-            "return_sequences"    : false
+            "units"         	   : 150,
+            "return_sequences"    : false,
+            "stateful"		   : false
         }  
         }},
         {
@@ -140,7 +143,8 @@
             "data_input"          : "data//training_in.npy",
             "data_output"         : "data//training_out.npy",
             "model"              : "my_model",
-            "epochs"             : 2000,
+            "recurrent"	  : true,
+            "epochs"             : 1000,
             "shuffle"	          : true,
             "training_log"       : true,
             "training_log_file"  : "history.dat" 
@@ -165,9 +169,9 @@
             "model"               : "my_model",
             "input_file"          : "data/training_in.npy",
             "target_file"         : "data/training_out.npy",
-            "timesteps"           : 1000,
+            "timesteps"           : 500,
             "lookback"            : 5,
-            "echo"                : 1,
+            "echo"                : 0,
             "predictions_file"    : "data/predictions",
             "save_format"         : "npy"            
         }},
@@ -180,8 +184,8 @@
             "input_variable"      : "Time",
             "variables"           : ["Pressure"],
             "axis"                : "plot",
-            "node_id"		   : 60,
-            "training_timesteps"  : 1000,
+            "node_id"		   : 0,
+            "training_timesteps"  : 430,
             "output_name"         : "bodyfitted_cylinder",
             "output_format"       : "png"          
         }}
