--- a/neural_network/structural_mechanics/dynamic_damped_beam_nonlinear_cantilever/LSTMProjectParameters.json
+++ b/neural_network/structural_mechanics/dynamic_damped_beam_nonlinear_cantilever/LSTMProjectParameters.json
@@ -61,7 +61,8 @@
             "layer_type"          : "input_layer",
             "layer_parameters"    :{
             "layer_name"          : "input",
-                "data_input"      : "data//training_in.npy"  
+                "data_input"      : "data//training_in.npy",
+                "input_to_recurrent": true  
             }  
         }},   
         {
@@ -89,7 +90,7 @@
         "parameters"    :{
             "layer_type"                   : "dense_layer",
             "layer_parameters"             :{
-                "units" 		     : 1,
+                "units" 		     : 2,
                 "activation"		     : "linear"
         }}},  
         {
@@ -139,6 +140,7 @@
             "data_output"         : "data//training_out.npy",
             "model"              : "my_model",
             "epochs"             : 10000,
+            "recurrent"          : true,
             "shuffle"	          : true,
             "training_log"       : true,
             "training_log_file"  : "history.dat" 
