--- a/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/steady_inlet_monte_carlo/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
+++ b/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/steady_inlet_monte_carlo/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
@@ -9,7 +9,7 @@
             "type"      : "correlated",
             "intensity" : 0.1
         },
-        "burnin_time"   : 10.0,
+        "burnin_time"   : 10,
         "random_reference_velocity" : false,
         "random_roughness_height" : false
     },
@@ -92,39 +92,6 @@
                     "search_radius" : 0.1
                 },
                 "poisson_parameters" : {
-                    "output_processes" : {
-                        "gid_output" : [{
-                            "python_module" : "gid_output_process",
-                            "kratos_module" : "KratosMultiphysics",
-                            "process_name"  : "GiDOutputProcess",
-                            "help"          : "This process writes postprocessing files for GiD",
-                            "Parameters"    : {
-                                "model_part_name"        : "FluidModelPart",
-                                "output_name"            : "kratos_perturbation_process",
-                                "postprocess_parameters" : {
-                                    "result_file_configuration" : {
-                                        "gidpost_flags"       : {
-                                            "GiDPostMode"           : "GiD_PostBinary",
-                                            "WriteDeformedMeshFlag" : "WriteDeformed",
-                                            "WriteConditionsFlag"   : "WriteConditions",
-                                            "MultiFileFlag"         : "SingleFile"
-                                        },
-                                        "file_label"          : "time",
-                                        "output_control_type" : "step",
-                                        "output_frequency"    : 1,
-                                        "body_output"         : true,
-                                        "node_output"         : false,
-                                        "skin_output"         : false,
-                                        "plane_output"        : [],
-                                        "nodal_results"       : ["TEMPERATURE","VELOCITY"],
-                                        "nodal_nonhistorical_results" : [],
-                                        "gauss_point_results" : []
-                                    },
-                                    "point_data_configuration"  : []
-                                }
-                            }
-                        }]
-                    },
                     "problem_data" : {
                         "model_part_name" : "FluidModelPart",
                         "domain_size"     : 3,
@@ -256,7 +223,7 @@
                     "write_drag_output_file" : true,
 		            "output_file_settings" :{
                         "file_name":  "drag_time_series",
-                        "folder_name": "drag"
+                        "output_path": "drag"
                     },
                     "print_drag_to_screen"   : false,
                     "reference_point"        : [0.0,0.0,0.0],
